--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,7 @@ celerybeat.pid
 .env
 .venv
 env/
-venv/
+venv1/
 ENV/
 env.bak/
 venv.bak/
@@ -127,3 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# Data
+
+/raw_data/
